data/derived/comb/progs/unify/prog2616.ml.out
Characters 117-127:
  List.split ( ((sum / 10) :: ((sum mod 10)) :: a) )
                ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
